resources/monitoring-ingress.yaml
# INGRESS DE NGINX PARA GRAFANA
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  tls:
    - hosts:
        - mon.localdev.me
      secretName: monitoring-grafana-tls
  rules:
    - host: mon.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  name: http-web
